Content too big fixed

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,7 +9,6 @@
     display: flex;
     height: 100%;
     width: 100%;
-    align-items: center;
     justify-content: center;
     padding: 20px;
     overflow-y: auto;
